[project]
name = "ci-triage-tools"
version = "0.1.0"
description = "PR-centric CI failure triage — unit tests and e2e"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0",
]

[project.scripts]
ci-triage = "ci_triage_tools.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ci_triage_tools", "src/tools_shared"]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
